# huffmanEncoding

./: CMakeLists.txt  dynArray.c  dynArray.h  encoded.txt  huffTree.c  huffdecode.c  huffencode  huffencode.c  huffman.c  huffman.h  linkedList.c  listNode.h  makefile  myugly.txt.huff  treeList.c  treeListNode.h  treeNode.h
